      symp_on_bot[simp]
      symp_on_equality[simp]
      symp_on_top[simp]
      total_on_top[simp]
      totalp_on_mono[mono]
      totalp_on_mono_strong
      totalp_on_mono_stronger
      totalp_on_mono_stronger_alt
      totalp_on_top[simp]
      trans_on_bot[simp]
      trans_on_top[simp]
      transp_on_bot[simp]
      transp_on_top[simp]

* Theory "HOL.Wellfounded":
  - Added lemmas.
      bex_rtrancl_min_element_if_wf_on
      bex_rtrancl_min_element_if_wfp_on
      wf_on_bot[simp]
      wf_on_lex_prod[intro]
      wfp_on_bot[simp]
      wfp_on_iff_wfp

* Theory "HOL.Order_Relation":
  - Added lemmas.
      antisym_relation_of[simp]
      asym_relation_of[simp]
      irrefl_relation_ofD
      refl_relation_ofD
      sym_relation_of[simp]
      total_relation_ofD
      trans_relation_of[simp]

* Theory "HOL.Equiv_Relation":
  - Strengthened lemmas. Minor INCOMPATIBILITY.
      sym_trans_comp_subset
  - Added lemmas.
      quotient_disj_strong

* Theory "HOL.Transfer":
  - Moved predicates left_unique and right_unique from HOL.Transfer to
    HOL.Relation. Minor INCOMPATIBILITY.
  - Removed lemmas. Minor INCOMPATIBILITY.
      left_unique_iff (use left_unique_iff_Uniq instead)
      right_unique_iff (use right_unique_iff_Uniq instead)
  - Added lemmas.
      single_valuedp_eq_right_unique

* Theory "HOL-Library.Multiset":
  - Renamed lemmas. Minor INCOMPATIBILITY.
      filter_image_mset ~> filter_mset_image_mset
  - Removed lemmas.
      size_multiset_sum_mset[simp]
  - Added lemmas.
      filter_mset_eq_mempty_iff[simp]
      filter_mset_mono_strong
      filter_mset_sum_list
      set_mset_sum_list[simp]
      size_mset_sum_mset_conv[simp]

* Removed theory "HOL-Library.Divides" (finally).



New in Isabelle2025 (March 2025)
--------------------------------

*** General ***

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name). See also